--- a/css.scss
+++ b/css.scss
@@ -14,28 +14,95 @@ body{
     margin-right: auto;
     margin-left: auto;
 }
-.logo{
-    display:block;
-    margin-top: 80px;
-    position: relative;
-    background-image: url("/Clipboard_History_App_Name.png");
-    background-size: 400px;
-    width: 400px;
-    height: 400px;
-    transform: scale(1.2);
-    background-repeat: no-repeat;
+
+@media (max-width: 1000px)
+{
+        
+    .logo{
+        display:block;
+        margin-top: 80px;
+        position: relative;
+        background-image: url("/Clipboard_History_App_Name.png");
+        background-size: 400px;
+        width: 400px;
+        height: 400px;
+        transform: scale(0.9);
+        background-repeat: no-repeat;
+        transition: transform 0.2s ease;
+    }
+
+    h1{
+        font-size: 2rem;
+        color: rgb(158, 61, 238);
+        transition: font-size 0.2s ease;
+    }
+
+    li{
+        color: rgb(253, 76, 185);
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+        transition: font-size 0.2s ease, margin 0.2s ease;
+    }
+
+    section{
+
+        margin-bottom: 100px;
+
+    }
 }
 
-h1{
-    font-size: 2rem;
-    color: rgb(158, 61, 238);
+@media (min-width: 1000px)
+{
+        
+    .logo{
+        display:block;
+        margin-top: 80px;
+        position: relative;
+        background-image: url("/Clipboard_History_App_Name.png");
+        background-size: 400px;
+        width: 400px;
+        height: 400px;
+        transform: scale(1.2);
+        background-repeat: no-repeat;
+        transition: transform 0.2s ease;
+        margin-bottom: 100px;
+    }
+
+    h1{
+        font-size: 3rem;
+        color: rgb(158, 61, 238);
+        transition: font-size 0.2s ease;
+    }
+
+    li{
+        color: rgb(253, 76, 185);
+        font-size: 1.4rem;
+        margin-bottom: 20px;
+        transition: font-size 0.2s ease, margin 0.2s ease;
+    }
+
+    section{
+        margin-bottom: 100px;
+
+    }
 }
 
-li{
-    color: rgb(253, 76, 185);
-    font-size: 1.4rem;
+strong{
+    outline-style: solid;
+    outline-width: 2px;
+    padding: 4px;
+    border-radius: 10px;
+    transition: border-radius 0.2s ease, outline 0.2s ease,
+    background-color 0.2s ease, color 0.2s ease;
 }
 
-section{
-    margin-bottom: 100px;
+strong:hover{
+    color: #070707;
+    outline-width: 0px;
+    border-radius: 10px;
+    transform: scale(1.1);
+    background-color: rgb(253, 76, 185) ;
+}
+.logo:hover{
+    cursor: pointer;
 }
