--- a/css.scss
+++ b/css.scss
@@ -1,7 +1,28 @@
+$goalPosition: 80px;
+$startingPosition: -2000px;
+$startingSectionPosition:-1000px;
+$goalSectionPosition: 0px;
+@keyframes logo-animation {
+    from{
+        margin-top: $startingPosition;
+    }
+    to{
+        margin-top: $goalPosition;
+    }
+}
+@keyframes section-animation {
+    from{
+        margin-left: $startingSectionPosition;
+    }
+    to{
+        margin-left: $goalSectionPosition;
+    }
+}
 body{
     padding: 0;
     margin: 0;
     font-family: 'Lexend', sans-serif;
+    
 }
 
 .wrapper{
@@ -20,7 +41,7 @@ body{
         
     .logo{
         display:block;
-        margin-top: 80px;
+        margin-top: $startingPosition;
         position: relative;
         background-image: url("/Clipboard_History_App_Name.png");
         background-size: 400px;
@@ -29,6 +50,10 @@ body{
         transform: scale(0.9);
         background-repeat: no-repeat;
         transition: transform 0.2s ease;
+        animation-name:  logo-animation;
+        animation-duration: .8s;
+        animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+        animation-fill-mode: forwards;
     }
 
     h1{
@@ -40,13 +65,19 @@ body{
     li{
         color: rgb(253, 76, 185);
         font-size: 1.2rem;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
+        line-height: 1.9rem;
         transition: font-size 0.2s ease, margin 0.2s ease;
     }
 
     section{
 
         margin-bottom: 100px;
+        margin-left: $startingSectionPosition;
+        animation-name:  section-animation;
+        animation-duration: 1s;
+        animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+        animation-fill-mode: forwards;
 
     }
 }
@@ -56,7 +87,7 @@ body{
         
     .logo{
         display:block;
-        margin-top: 80px;
+        margin-top: $startingPosition;
         position: relative;
         background-image: url("/Clipboard_History_App_Name.png");
         background-size: 400px;
@@ -66,6 +97,10 @@ body{
         background-repeat: no-repeat;
         transition: transform 0.2s ease;
         margin-bottom: 100px;
+        animation-name:  logo-animation;
+        animation-duration: .8s;
+        animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+        animation-fill-mode: forwards;
     }
 
     h1{
@@ -77,12 +112,16 @@ body{
     li{
         color: rgb(253, 76, 185);
         font-size: 1.4rem;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
         transition: font-size 0.2s ease, margin 0.2s ease;
     }
 
     section{
         margin-bottom: 100px;
+        animation-name:  section-animation;
+        animation-duration: 1s;
+        animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+        animation-fill-mode: forwards;
 
     }
 }
