--- a/css/css.css
+++ b/css/css.css
@@ -21,7 +21,7 @@
     margin-left: -1000px;
   }
   to {
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
 
@@ -30,7 +30,7 @@
     margin-left: -1000px;
   }
   to {
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
 
