There was some text missing

--- a/css.scss
+++ b/css.scss
@@ -1,6 +1,6 @@
 $goalPosition: 80px;
 $startingPosition: -2000px;
-$startingSectionPosition:-1000px;
+$startingSectionPosition:-3000px;
 $goalSectionPosition: 0;
 @keyframes logo-animation {
     from{
@@ -22,6 +22,7 @@ body{
     padding: 0;
     margin: 0;
     font-family: 'Lexend', sans-serif;
+    overflow-x: hidden;
     
 }
 
@@ -73,12 +74,15 @@ body{
     section{
 
         margin-bottom: 100px;
-        margin-left: $startingSectionPosition;
+
+    }
+    .main-section-wrapper{
         animation-name:  section-animation;
+        animation-play-state: paused;
         animation-duration: 1s;
         animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
         animation-fill-mode: forwards;
-
+        
     }
 }
 
@@ -118,11 +122,15 @@ body{
 
     section{
         margin-bottom: 100px;
+        
+
+    }
+    .main-section-wrapper{
         animation-name:  section-animation;
         animation-duration: 1s;
         animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
         animation-fill-mode: forwards;
-
+        animation-play-state: paused;
     }
 }
 
