changed the div logo container for an img tag

--- a/css.scss
+++ b/css.scss
@@ -44,12 +44,12 @@ body{
         display:block;
         margin-top: $startingPosition;
         position: relative;
-        background-image: url("/Clipboard_History_App_Name.png");
-        background-size: 400px;
-        width: 400px;
+        // background-image: url("/Clipboard_History_App_Name.png");
+        // background-size: 400px;
+        // width: 400px;
         height: 400px;
         transform: scale(0.9);
-        background-repeat: no-repeat;
+       // background-repeat: no-repeat;
         transition: transform 0.2s ease;
         animation-name:  logo-animation;
         animation-duration: .8s;
@@ -94,12 +94,12 @@ body{
         display:block;
         margin-top: $startingPosition;
         position: relative;
-        background-image: url("/Clipboard_History_App_Name.png");
-        background-size: 400px;
+        // background-image: url("/Clipboard_History_App_Name.png");
+        // background-size: 400px;
         width: 400px;
-        height: 400px;
+        // height: 400px;
         transform: scale(1.2);
-        background-repeat: no-repeat;
+        // background-repeat: no-repeat;
         transition: transform 0.2s ease;
         margin-bottom: 100px;
         animation-name:  logo-animation;
