--- a/css/css.css
+++ b/css/css.css
@@ -16,24 +16,6 @@
   }
 }
 
-@-webkit-keyframes section-animation {
-  from {
-    margin-left: -3000px;
-  }
-  to {
-    margin-left: 0;
-  }
-}
-
-@keyframes section-animation {
-  from {
-    margin-left: -3000px;
-  }
-  to {
-    margin-left: 0;
-  }
-}
-
 body {
   padding: 0;
   margin: 0;
@@ -62,171 +44,149 @@ body {
   padding: 0 40px;
 }
 
+.logo {
+  --logo-width: 400px;
+  --logo-scale: 1.2;
+  --spacing-margin-bottom: 100px;
+  --logo-height: 400px;
+  display: block;
+  margin-top: -2000px;
+  position: relative;
+  width: var(--logo-width);
+  -webkit-transform: scale(var(--logo-scale));
+          transform: scale(var(--logo-scale));
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
+  margin-bottom: var(--spacing-margin-bottom);
+  -webkit-animation-name: logo-animation;
+          animation-name: logo-animation;
+  -webkit-animation-duration: .8s;
+          animation-duration: .8s;
+  -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+          animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+}
+
+h1 {
+  --h1-font-size: 3rem;
+  font-size: var(--h1-font-size);
+  color: #9e3dee;
+  -webkit-transition: font-size 0.2s ease;
+  transition: font-size 0.2s ease;
+}
+
+li {
+  --li-font-size: 1.4rem;
+  --li-margin-bottom: 40px;
+  color: #fd4cb9;
+  font-size: var(--li-font-size);
+  margin-bottom: var(--li-margin-bottom);
+  -webkit-transition: font-size 0.2s ease, margin 0.2s ease;
+  transition: font-size 0.2s ease, margin 0.2s ease;
+}
+
+section {
+  --section-margin-bottom: 100px;
+  margin-bottom: var(--section-margin-bottom);
+}
+
+.main-section-wrapper {
+  --starting-section-position: -3000px;
+  --main-section-wrapper-left: 100px;
+  --goal-section-position: 0;
+  position: relative;
+  margin-left: var(--starting-section-position);
+  left: var(--main-section-wrapper-left);
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+          animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation-name: section-animation;
+          animation-name: section-animation;
+}
+
+@-webkit-keyframes section-animation {
+  from {
+    margin-left: var(--starting-section-position);
+  }
+  to {
+    margin-left: var(--goalSectionPosition);
+  }
+}
+
+@keyframes section-animation {
+  from {
+    margin-left: var(--starting-section-position);
+  }
+  to {
+    margin-left: var(--goalSectionPosition);
+  }
+}
+
 @media (max-width: 1000px) {
   .logo {
-    display: block;
-    margin-top: -2000px;
-    position: relative;
-    height: 400px;
-    -webkit-transform: scale(0.6);
-            transform: scale(0.6);
-    -webkit-transition: -webkit-transform 0.2s ease;
-    transition: -webkit-transform 0.2s ease;
-    transition: transform 0.2s ease;
-    transition: transform 0.2s ease, -webkit-transform 0.2s ease;
-    -webkit-animation-name: logo-animation;
-            animation-name: logo-animation;
-    -webkit-animation-duration: .8s;
-            animation-duration: .8s;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
+    --logo-height: 400px;
+    --logo-scale: 0.6;
   }
   h1 {
-    font-size: 1rem;
-    color: #9e3dee;
-    -webkit-transition: font-size 0.2s ease;
-    transition: font-size 0.2s ease;
+    --h1-font-size: 1rem;
   }
   li {
-    color: #fd4cb9;
-    font-size: 0.8rem;
-    margin-bottom: 40px;
+    --li-font-size: 0.8rem;
+    --li-margin-bottom: 40px;
     line-height: 1.9rem;
-    -webkit-transition: font-size 0.2s ease, margin 0.2s ease;
-    transition: font-size 0.2s ease, margin 0.2s ease;
   }
   section {
-    margin-bottom: 20px;
+    --section-margin-bottom: 20px;
   }
   .main-section-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    margin-left: -3000px;
-    -webkit-animation-delay: 0.5s;
-            animation-delay: 0.5s;
-    -webkit-animation-duration: 1s;
-            animation-duration: 1s;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-name: section-animation;
-            animation-name: section-animation;
+    --main-section-wrapper-left: 0;
   }
 }
 
 @media (min-width: 1001px) and (max-width: 1920px) {
   .logo {
-    display: block;
-    margin-top: -2000px;
-    position: relative;
-    width: 400px;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transition: -webkit-transform 0.2s ease;
-    transition: -webkit-transform 0.2s ease;
-    transition: transform 0.2s ease;
-    transition: transform 0.2s ease, -webkit-transform 0.2s ease;
-    margin-bottom: 100px;
-    -webkit-animation-name: logo-animation;
-            animation-name: logo-animation;
-    -webkit-animation-duration: .8s;
-            animation-duration: .8s;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
+    --logo-width: 400px;
+    --logo-scale: 1.2;
+    --spacing-margin-bottom: 100px;
   }
   h1 {
-    font-size: 3rem;
-    color: #9e3dee;
-    -webkit-transition: font-size 0.2s ease;
-    transition: font-size 0.2s ease;
+    --h1-font-size: 3rem;
   }
   li {
-    color: #fd4cb9;
-    font-size: 1.4rem;
-    margin-bottom: 40px;
-    -webkit-transition: font-size 0.2s ease, margin 0.2s ease;
-    transition: font-size 0.2s ease, margin 0.2s ease;
+    --li-font-size: 1.4rem;
+    --li-margin-bottom: 40px;
   }
   section {
-    margin-bottom: 100px;
+    --section-margin-bottom: 100px;
   }
   .main-section-wrapper {
-    position: relative;
-    margin-left: -3000px;
-    left: 100px;
-    -webkit-animation-delay: 0.5s;
-            animation-delay: 0.5s;
-    -webkit-animation-duration: 1s;
-            animation-duration: 1s;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-name: section-animation;
-            animation-name: section-animation;
+    --main-section-wrapper-left: 100px;
   }
 }
 
 @media (min-width: 1920px) {
   .logo {
-    display: block;
-    margin-top: -2000px;
-    position: relative;
-    width: 400px;
-    -webkit-transform: scale(1.2);
-            transform: scale(1.2);
-    -webkit-transition: -webkit-transform 0.2s ease;
-    transition: -webkit-transform 0.2s ease;
-    transition: transform 0.2s ease;
-    transition: transform 0.2s ease, -webkit-transform 0.2s ease;
-    margin-bottom: 100px;
-    -webkit-animation-name: logo-animation;
-            animation-name: logo-animation;
-    -webkit-animation-duration: .8s;
-            animation-duration: .8s;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
+    --logo-width: 400px;
+    --logo-scale: 1.2;
+    --spacing-margin-bottom: 100px;
   }
   h1 {
-    font-size: 3rem;
-    color: #9e3dee;
-    -webkit-transition: font-size 0.2s ease;
-    transition: font-size 0.2s ease;
+    --h1-font-size: 3rem;
   }
   li {
-    color: #fd4cb9;
-    font-size: 1.4rem;
-    margin-bottom: 40px;
-    -webkit-transition: font-size 0.2s ease, margin 0.2s ease;
-    transition: font-size 0.2s ease, margin 0.2s ease;
+    --li-font-size: 1.4rem;
+    --li-margin-bottom: 40px;
   }
   section {
-    margin-bottom: 100px;
-  }
-  .main-section-wrapper {
-    margin-left: -3000px;
-    -webkit-animation-delay: 0.5s;
-            animation-delay: 0.5s;
-    -webkit-animation-duration: 1s;
-            animation-duration: 1s;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-            animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-    -webkit-animation-name: section-animation;
-            animation-name: section-animation;
+    --section-margin-bottom: 100px;
   }
 }
 
